# ninehub-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  connections.ts  dashboard.ts  mcp.ts  platform.ts  serve.ts  types.ts
frontend/src/components/: ConnectionFormPanel.vue  ConnectionSubpageLayout.vue  ConnectionWorkflowSteps.vue  CopyButton.vue  EmptyState.vue  PageBreadcrumb.vue  PageHeader.vue  (+3 more)
ninehub_mcp/: __init__.py  cli.py  config.py  naming.py  wildcard.py
ninehub_mcp/admin/: __init__.py  app.py  auth.py  build_service.py  db.py  jobs.py  log_buffer.py  platform_settings.py  scan_service.py  serve_supervisor.py  session.py  static_ui.py  tool_admin.py  utils.py
ninehub_mcp/collector/: __init__.py  sample.py
ninehub_mcp/context/: __init__.py  models.py
ninehub_mcp/generator/: __init__.py
ninehub_mcp/ir/: __init__.py  models.py
ninehub_mcp/llm/: __init__.py  client.py  graph_builder.py  manifest_builder.py  rule_manifest.py  table_builder.py
ninehub_mcp/planner/: __init__.py  filter_infer.py  join_infer.py  tools.py
ninehub_mcp/quality/: __init__.py  scorer.py
ninehub_mcp/runtime/: __init__.py  catalog_runtime.py  catalog_schema.py  config_loader.py  middleware.py  query_engine.py  registry.py  serializers.py  server.py  tool_executor.py
ninehub_mcp/scanner/: __init__.py  base.py  ninehub.py  postgres.py  type_mapping.py
ninehub_mcp/utils/: encoding.py
(+55 files in other folders)
