[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ninehub-mcp"
version = "0.1.0"
description = "PostgreSQL schema scanner and MCP server for NineHub and generic databases"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "jinja2>=3.1",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.2",
    "ruff>=0.3",
]

[project.scripts]
ninehub-mcp = "ninehub_mcp.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ninehub_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:pytest_postgresql"
markers = [
    "live: tests that require local Admin SQLite or external services",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
